--- a/Samples.Nancy/package.json
+++ b/Samples.Nancy/package.json
@@ -1,6 +1,6 @@
 ﻿{
     "dependencies": {
-        "connect-owin": "0.0.1"
+        "connect-owin": "~0.1.0"
     },
     "devDependencies": {
 	    "express": "~3.4.0"
