--- a/Samples.WebApi/Samples.WebApi.csproj
+++ b/Samples.WebApi/Samples.WebApi.csproj
@@ -61,15 +61,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\HelloController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Config\WebApiConfig.cs" />
+    <Compile Include="Models\Product.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Site\js\jquery-2.0.3.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Site\index.html" />
+    <Content Include="Site\js\jquery-2.0.3.min.js" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
