--- a/Samples.WebApi/package.json
+++ b/Samples.WebApi/package.json
@@ -3,6 +3,12 @@
         "connect-owin": "~0.1.0"
     },
     "devDependencies": {
-        "express": "~3.4.0"
+		"express": "~3.3.4",
+		"grunt": "~0.4.1",
+		"grunt-contrib-connect": "~0.3.0",
+		"grunt-contrib-watch": "~0.4.4",
+		"grunt-open": "~0.2.0",
+		"connect-livereload": "~0.2.0",
+		"matchdep": "~0.1.2"
     }
 }
