--- a/Samples.WebApi/package.json
+++ b/Samples.WebApi/package.json
@@ -9,6 +9,6 @@
 		"grunt-contrib-watch": "~0.4.4",
 		"grunt-open": "~0.2.0",
 		"connect-livereload": "~0.2.0",
-		"matchdep": "~0.1.2"
+		"load-grunt-tasks": "~0.2.0"
     }
 }
