--- a/Samples.WebApi/package.json
+++ b/Samples.WebApi/package.json
@@ -3,12 +3,13 @@
         "connect-owin": "~0.1.0"
     },
     "devDependencies": {
-		"express": "~3.3.4",
-		"grunt": "~0.4.1",
-		"grunt-contrib-connect": "~0.3.0",
-		"grunt-contrib-watch": "~0.4.4",
-		"grunt-open": "~0.2.0",
-		"connect-livereload": "~0.2.0",
-		"load-grunt-tasks": "~0.2.0"
+        "connect": "~2.9.0",
+        "express": "~3.3.4",
+        "grunt": "~0.4.1",
+        "grunt-contrib-connect": "~0.3.0",
+        "grunt-contrib-watch": "~0.4.4",
+        "grunt-open": "~0.2.0",
+        "connect-livereload": "~0.2.0",
+        "load-grunt-tasks": "~0.2.0"
     }
 }
