--- a/Samples.Fix_SimpleWeb/Samples.Fix_SimpleWeb.csproj
+++ b/Samples.Fix_SimpleWeb/Samples.Fix_SimpleWeb.csproj
@@ -32,8 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Fix">
-      <HintPath>..\packages\Fix.0.6.3.52343\lib\net45\Fix.dll</HintPath>
+    <Reference Include="Fix, Version=0.6.4.51254, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Fix.0.6.4.51254\lib\net45\Fix.dll</HintPath>
     </Reference>
     <Reference Include="Simple.Web">
       <HintPath>..\packages\Simple.Web.0.11.2.51750\lib\net40\Simple.Web.dll</HintPath>
@@ -46,7 +47,9 @@
     <Compile Include="FixConfig.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
